Tweaked styling, set navbar in true center, fixed responsiveness on tablet devices

--- a/src/index.css
+++ b/src/index.css
@@ -16,103 +16,105 @@ code {
 @font-face {
   font-family: 'TitleFont';
   src: local('TitleFont'), url(./assets/fonts/ChopinScript.ttf) format('truetype');
-  /* other formats include: 'woff2', 'truetype, 'opentype',
-  'embedded-opentype', and 'svg' */
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
   font-family: 'TitleFont2';
   src: local('TitleFont2'), url(./assets/fonts/JosefinSans-Regular.ttf) format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 
-  .horizontal-navbar {
-    /* Styles for the main container (position, height, width) */
-    left: 33vw;
-    top: 45px;
-    position: fixed;
-    align-items:first baseline;
-    background-image: linear-gradient(to right, #e7be7f, #906e49);
-    border-radius: 10px;
-  }
+.horizontal-navbar {
+  margin: 0px auto;
+  width: 630px;
+  top: 0;
+  position: sticky;
+  display: flex;
+  align-items: baseline;
+  background-image: linear-gradient(to right, #e7be7f, #906e49);
+  border-radius: 10px;
+}
 
-  .hidden {
-    visibility: hidden;
-    transition: all 0.5s;
-    transform: translateY(-100%);
-  }
+.hidden {
+  visibility: hidden;
+  transition: all 0.5s;
+  transform: translateY(-100%);
+}
 
-  .active {
-    visibility: visible;
-    transition: all 0.5s;
-  }
+.active {
+  visibility: visible;
+  transition: all 0.5s;
+}
 
-  .nav-links {
-    /* Styles for the navigation link container */
-    display: flex;
-    list-style: none;
-    padding: 0;
-    margin: 0; 
-  }
+.nav-links {
+  /* Styles for the navigation link container */
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
-  .nav-link {
-    /* Styles for individual navigation links */
-    font-family: TitleFont2;
-    padding: 5px;
-    margin-right: 15px;
-    text-decoration: none;
-    text-align: center;
-    font-size: 20px;
-  }
+.nav-link {
+  /* Styles for individual navigation links */
+  font-family: TitleFont2;
+  padding: 5px;
+  margin-right: 15px;
+  text-decoration: none;
+  text-align: center;
+  font-size: 20px;
+}
 
-  .nav-link:hover {
-    color: goldenrod !important;
-  }
+.nav-link:hover {
+  color: goldenrod !important;
+}
 
-  .full-screen-background {
-    border: 150px solid transparent;
-    border-image: url('./assets/img/bg_img.jpg') 500 stretch;
-    overflow-y: scroll;
-    overflow-x: hidden;
-  }
+.full-screen-background {
+  border: 150px solid transparent;
+  border-image: url('./assets/img/bg_img.jpg') 500 stretch;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
 
-  .title {
-    font-family: TitleFont;
-    font-size: 84px;
-    text-shadow: 2px 2px 2px gray;
-  }
+.title {
+  font-family: TitleFont;
+  font-size: 84px;
+  text-shadow: 2px 2px 2px gray;
+}
 
-  .sub-title {
-    font-family: TitleFont2;
-    font-size: 20px;
-  }
+.sub-title {
+  font-family: TitleFont2;
+  font-size: 20px;
+}
 
-  h2 {
-    font-size: 48px !important;
-  }
+h2 {
+  font-size: 48px !important;
+}
 
-   h3 {
-    font-size: 32px !important;
-  }
+h3 {
+  font-size: 32px !important;
+}
 
-  
-  .header {
-    margin-top: 250px;
-  }
+.header {
+  margin-top: 250px;
+}
 
-  .story {
-    margin-top: 500px;
-  }
-  
-  .wed-info {
-    margin-top: 500px;
-    margin-bottom: 500px;
-  }
+.story {
+  margin-top: 500px;
+}
 
-  .venue-image {
-    width: 35rem;
-    height: 35rem;
-    margin: 0;
-    padding: 0;
+.wed-info {
+  margin-top: 500px;
+  margin-bottom: 500px;
+}
+
+.venue-image {
+  width: 35rem;
+  height: 35rem;
+  margin: 0;
+  padding: 0;
 }
 
 @media (min-width: 769px) and (max-width: 1023px) {
@@ -123,9 +125,11 @@ code {
   }
 
   .horizontal-navbar {
+    left: 0;
+    margin: 0;
     width: 30px;
     background-image: none;
-    border-radius: none;
+    border-radius: 0;
   }
 }
 
@@ -133,9 +137,10 @@ code {
 
   .horizontal-navbar {
     left: 0;
+    margin: 0;
     width: 30px;
     background-image: none;
-    border-radius: none;
+    border-radius: 0;
   }
 
   .nav-links {
@@ -152,9 +157,8 @@ code {
 
   .sub-title {
     font-size: 14px;
-
   }
-  
+
   h2 {
     font-size: 32px !important;
   }
@@ -183,5 +187,4 @@ code {
     overflow-y: scroll;
     overflow-x: hidden;
   }
-
 }
